--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/alation/6b72c778-4ec5-4cd6-a216-aff7d010cc4a'>Alation, Inc. - Full Stack Engineer: Customer Growth</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://verticalscale.join.com/jobs/471529-full-stack-developer-internship-f-m-d'>Job @ Vertical  Scale  (Berlin): Full-Stack Develo... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -66,7 +70,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/fr/o/developpeur-fullstack-hf-cdi'>
+<h5><a href='https://jellysmack.recruitee.com/l/fr/o/developpeur-fullstack-hf-cdi'>
       D?veloppeur Full-Stack H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -100,11 +104,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/S8zRFEy9g1/Fullstack-Engineer'>Fullstack Engineer - Fractal Analytics - Career Page</a></h5> 
+<h5><a href='http://fractalanalytics.applytojob.com/apply/S8zRFEy9g1/Fullstack-Engineer'>Fullstack Engineer - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nine/743999698526577-golang-nodejs-aws-kubernetes-full-stack-engineer'>Nine Golang / NodeJS / AWS / Kubernetes Full-stack engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Nine/743999698526577-golang-nodejs-aws-kubernetes-full-stack-engineer'>Nine Golang / NodeJS / AWS / Kubernetes Full-stack engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia  Sydney</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -116,7 +120,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Kamernet/743999698473531-senior-fullstack-net-developer'>Kamernet Senior Fullstack .Net Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Kamernet/743999698473531-senior-fullstack-net-developer'>Kamernet Senior Fullstack .Net Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -168,7 +172,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/octane/c26d9979-6427-4637-a3fb-a422596690d2'>Octane AI - Full-Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/octane/c26d9979-6427-4637-a3fb-a422596690d2'>Octane AI - Full-Stack Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -190,7 +194,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vkb.join.com/jobs/470765-full-stack-developer-m-w-d'>Job @ uptodate Ventures (Munich): Full Stack Devel... | JOIN</a></h5> 
+<h5><a href='https://vkb.join.com/jobs/470765-full-stack-developer-m-w-d'>Job @ uptodate Ventures (Munich): Full Stack Devel... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -198,7 +202,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.hitachi.com/jobs/4691215-aws-full-stack-developer'>AWS Full Stack Developer in Chicago, IL - Hitachi</a></h5> 
+<h5><a href='https://careers.hitachi.com/jobs/4691215-aws-full-stack-developer'>AWS Full Stack Developer in Chicago, IL - Hitachi</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -310,7 +314,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698432477-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698432477-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -379,7 +383,7 @@
 <p>Oct 16, 2019 ... We are currently recruiting at all levels from engineer to Technical Leads. Our 
 engineers love building things, solving complex challenges, learning new?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/psychology-today/j/EB70A521B4'>Full-Stack Engineer - Psychology Today</a></h5> 
+<h5><a href='https://apply.workable.com/psychology-today/j/EB70A521B4'>Full-Stack Engineer - Psychology Today</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... If you're a talented Full-Stack Engineer looking for: Work/life balance; A product 
 and team that will inspire you; A healthy and profitable company; The freedom to
@@ -393,7 +397,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -401,7 +405,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twinelabs/jobs/4450909002'>Job Application for Full-Stack Engineer at Twine Labs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twinelabs/jobs/4450909002'>Job Application for Full-Stack Engineer at Twine Labs</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -409,7 +413,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Gurugram, Haryana</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1917995'>Job Application for Principal Full Stack Engineer at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1917995'>Job Application for Principal Full Stack Engineer at Coupang</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -423,7 +427,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://syrocon.join.com/jobs/461673-full-stack-entwickler-java-java-ee-m-w-d-fuer-sicherheitssysteme-an-flughaefen'>Job @ SyroCon Consulting (Eschborn): Full Stack En... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syrocon.join.com/jobs/461673-full-stack-entwickler-java-java-ee-m-w-d-fuer-sicherheitssysteme-an-flughaefen'>Job @ SyroCon Consulting (Eschborn): Full Stack En... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -431,7 +435,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zizoo.join.com/jobs/461315-full-stack-developer-m-f-x'>Job @ Zizooboats (Berlin): Full-Stack Developer (m... | JOIN</a></h5> 
+<h5><a href='https://zizoo.join.com/jobs/461315-full-stack-developer-m-f-x'>Job @ Zizooboats (Berlin): Full-Stack Developer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -439,7 +443,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://visionbox.recruitee.com/o/full-stack-developer-the-netherlands'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://visionbox.recruitee.com/o/full-stack-developer-the-netherlands'>
       Full Stack Developer - The Netherlands - Vision-Box
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands  Lisbon, Portugal</span></p>
@@ -450,10 +454,6 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://fincite.join.com/jobs/460128-full-stack-developer-m-f-d'>Job @ Fincite (Frankfurt): Full Stack Developer (m... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/beetalents/62b8244d-1a0e-4cff-b70c-c917b138a997'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
